[ST-1081]: Updated selectors as per the latest changes for hearing tests (#713)
* Fix the failing create case test for the changes in Subject details screen

* add AAT e2e Test for Hearing summary

* Fix issue with running tests parallely

* fix style

* fix styling issues

* fix styling issue

* update tests with necessary wait times

* Add the dependency task for cftlibtest

* Add hearing journeys tests

* add additional hearing tests

* update tests

* update hearing tests

* update tests

* update selectors of hearing tests

* disable failing tests

---------

Co-authored-by: Pavi <pva08@Pavithrans-MacBook-Pro.local>